Add missing unit tests

--- a/src/tests/GitDotNet.Tests/Properties/Resource.resx
+++ b/src/tests/GitDotNet.Tests/Properties/Resource.resx
@@ -171,6 +171,9 @@
   <data name="CompleteRepository" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>.git.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="CompleteRepositoryWithRename" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>.gitWithRename.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="BlobPosition" xml:space="preserve">
     <value>43</value>
   </data>
