--- a/src/tests/GitDotNet.Tests/Properties/Resource.resx
+++ b/src/tests/GitDotNet.Tests/Properties/Resource.resx
@@ -174,6 +174,9 @@
   <data name="CompleteRepositoryWithRename" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>.gitWithRename.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="CompleteRepositoryWithStash" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>.gitWithStash.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="CompleteMergeRepository" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>.gitMergeRepository.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
