Move benchmarks to unit tests

--- a/src/tests/GitDotNet.Tests/Properties/Resource.resx
+++ b/src/tests/GitDotNet.Tests/Properties/Resource.resx
@@ -177,6 +177,9 @@
   <data name="CompleteRepositoryWithStash" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>.gitWithStash.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="BenchmarkRepository" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>BenchmarkRepository.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="CompleteMergeRepository" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>.gitMergeRepository.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
