--- a/src/tests/GitDotNet.Tests/Properties/Resource.resx
+++ b/src/tests/GitDotNet.Tests/Properties/Resource.resx
@@ -183,6 +183,9 @@
   <data name="CompleteMergeRepository" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>.gitMergeRepository.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="SourceFile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>SourceFile.txt;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="BlobPosition" xml:space="preserve">
     <value>43</value>
   </data>
